# cont-int-2026-1

./: .gitignore  Projeto Cooperativo ROS 2 Turtlesim.md  plano-de-ensino.md
conceitos-basicos/: ros-concepts.md
conceitos-basicos/project/: turtlesim-project.md
conceitos-basicos/scripts/.devcontainer/: devcontainer.json
conceitos-basicos/scripts/docker_compose_dev/: docker-compose-gui.yml  docker-compose-nvidia.yml
conceitos-basicos/scripts/docker_dev/: create_container.sh
dev-ros2/: dev-ros2.md  nodes-ros2-work1-cheat-cheet.md  nodes-ros2-work1.md  nodes-ros2-work2.md
fundamendos-ros2/: ros-install.md
fundamendos-ros2-ia/: ros-install.md
fundamendos-ros2/scripts/: ros2_install_jazzy.sh  ros2_uninstall_jazzy.sh
fundamentos-ros2/: ros-basic.md  ros-install.md
fundamentos-ros2/scripts/: ros2_install_jazzy.sh  ros2_uninstall_jazzy.sh
fundamentos-ros2/scripts/ros2_jazzy_docker/docker_basics/: Dockerfile  Dockerfile.basic
fundamentos-ros2/scripts/ros2_jazzy_docker/docker_compose/: docker-compose-basic.yml  docker-compose.yml
fundamentos-ros2/scripts/ros2_jazzy_docker/docker_gui/: Dockerfile.master_ros2  build_image.sh  create_container.sh  delete_all_img.bash  remove_container.sh  ros_entrypoint.sh  ros_ws_entrypoint.sh  start_container.sh  stop_container.sh
fundamentos-ros2/scripts/ros2_jazzy_docker/docker_setup_scripts/: setup_docker_ubuntu.sh
modulo_simulacao_1/: roteiro_pratico.md  teoria_cinematica.html  teoria_cinematica.ipynb  teoria_cinematica.md
modulo_simulacao_1/scripts/: install_tb3_jazzy.sh  move_robot.py
modulo_simulacao_1/scripts/controle_simulacao/: package.xml  setup.py
modulo_simulacao_1/scripts/controle_simulacao/controle_simulacao/: circulo.py
modulo_simulacao_2/: roteiro_pratico.md
modulo_simulacao_2/scripts/controle_simulacao/: package.xml  setup.cfg  setup.py
modulo_simulacao_2/scripts/controle_simulacao/controle_simulacao/: explorador.py
modulo_simulacao_3/: roteiro_pratico.md
modulo_simulacao_4/: funcamentacao_teorica.md  fundamentacao_teorica.md  roteiro_pratico.md
modulo_simulacao_4/scripts/: Dockerfile
modulo_simulacao_4/scripts/cartpole_description/: CMakeLists.txt  package.xml
modulo_simulacao_4/scripts/cartpole_description/config/: cartpole_controller.yaml
modulo_simulacao_4/scripts/cartpole_description/launch/: cartpole.launch.py
modulo_simulacao_4/scripts/cartpole_description/urdf/: cartpole.urdf.xacro
modulo_simulacao_4/scripts/cartpole_drl_ppo/: package.xml  setup.cfg  setup.py
modulo_simulacao_4/scripts/cartpole_drl_ppo/cartpole_drl_ppo/: cartpole_env.py  cartpole_prediction.py  cartpole_training.py  plot_data.py
modulo_simulacao_4/scripts/cartpole_reset/: package.xml  setup.cfg  setup.py
modulo_simulacao_4/scripts/cartpole_reset/cartpole_reset/: cartpole_reset.py
nav-seg/: roteiro_pratico.md
nav-seg/scripts/: Dockerfile  install_tb3_humble.sh
nav-vant-rl/: roteiro-pratico.md  tutorial-x11-ssh.md
nav-vant-rl/scripts/: Dockerfile  install_drone_rl_control_humble.sh
nodes-ros2/: nodes-ros2-work1.md  nodes-ros2-work2.md  nodes-ros2.md  preparar-lab-ros2-works2.sh
nodes-ros2/scripts/docker_dev/: start_container.sh
nodes-ros2/scripts/my_cpp_pkg/: CMakeLists.txt  package.xml
nodes-ros2/scripts/my_cpp_pkg/src/: supervisor_node.cpp
nodes-ros2/scripts/my_py_pkg/: package.xml  setup.py
nodes-ros2/scripts/my_py_pkg/my_py_pkg/: controle_aberto_node.py  patrulha_node.py
nodes-ros2/scripts/node_oop_template/: node_oop_template.cpp  node_oop_template.py
topics-ros2/: topic-ros2-work1.md  topics-ros2.md
topics-ros2/scripts/my_cpp_pkg/: CMakeLists.txt  package.xml
topics-ros2/scripts/my_cpp_pkg/src/: number_publisher.cpp
topics-ros2/scripts/my_py_pkg/my_py_pkg/: number_counter.py
topics-ros2/scripts/my_robot_interfaces/: CMakeLists.txt  package.xml
topics-ros2/scripts/turtle_controller/: package.xml  setup.py
topics-ros2/scripts/turtle_controller/turtle_controller/: turtle_controller.py
topics-ros2/scripts/turtle_controller_cpp/: CMakeLists.txt  package.xml
topics-ros2/scripts/turtle_controller_cpp/src/: turtle_controller.cpp
